--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lucide-react": "^0.435.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^6.26.1",
+    "react-router-dom": "^7.8.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
